# embly

./: .dockerignore  .gitignore  Cargo.toml  Makefile  build.sh  cloudbuild.yml  embly.code-workspace  exec.sh  generate.sh  go.mod  go.sum  notes.md  plan.md  readme.md  run.sh  rust-example.md  todo.md
.circleci/: config.yml
.github/: main.workflow
.metals/: metals.h2.db
api/: coverage.out  docker-compose.yml  go.mod  go.sum  migrate.Dockerfile  migrate.sh  run.sh  test.Dockerfile
api/pkg/: sqlboiler.toml
app/: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Makefile  bundle.sh  docker-compose.yml  embly.hcl  run.sh
app/auth/: Cargo.toml
app/auth/src/: main.rs
app/blog/: .gitignore  build.sh  config.toml  run.sh
app/frontend/: README.md  config-overrides.js  package.json
app/hello/: Cargo.toml
app/index/: index.html
app/star-playground/: index.html
app/terraform/: Dockerfile  build.sh  certs.tf  create-docker-machine.sh  docker-compose.yml  docker_machine.tf  entrypoint.sh  lb.tf  main.tf  public_files.hcl  public_files.tf  vpc.tf
cmd/api/: Dockerfile  main.go
cmd/api-test-calls/: main.go
cmd/build-server/: Dockerfile  main.go
cmd/embly/: arch.md  comm.go  comm_test.go  config.go  config_test.go  embly  main.go  main_test.go  run.sh
cmd/rustcompile/: main.go
compilers/nix/: Dockerfile  cctools.nix  crossshell.nix  docker-compose.yml  lucetc-0.5.0.nix  lucetc.nix  overlay.nix  protoc-osx.nix  protoc.nix  readme.md  result  rust-run.nix  rust-shell.nix  rust.nix  wasm-run.nix  wrapper.nix
compilers/proto/: Dockerfile  build.sh  docker-compose.yml  readme.md
compilers/rust-wasm/: Dockerfile  build.sh  clean.Dockerfile  docker-compose.yml  img.Dockerfile  img.sh  shell.sh
control/: .bashrc  Dockerfile  docker-compose.yml
dockerfiles/: Dockerfile  docker-compose.yml  nix.Dockerfile  rust-build.nix  shell.nix
embly/: Cargo.toml  build.sh
embly-rs/: Cargo.toml  gen_proto.sh  readme.md
embly-rs/src/: error.rs  http.rs  kv.rs  lib.rs  proto.rs  task.rs
embly-rs/src/http_proto/: httpproto.rs  mod.rs
embly-wrapper-rs/: Cargo.toml  bindings.json  build.rs  lucetc_ex.sh
embly-wrapper-rs/.cargo/: config
embly-wrapper-rs/src/: bimap.rs  bytes.rs  context.rs  error.rs  hostcalls.rs  instance.rs  lib.rs  main.rs
embly-wrapper-rs/src/protos/: comms.rs  mod.rs
embly-wrapper-rs/tests/: basic.rs
embly/src/: lib.rs  main.rs
examples/db/: Cargo.toml  data.proto  embly.hcl
examples/db/listener/: Cargo.toml  build.rs
examples/db/listener/src/: main.rs
examples/db/listener/src/protos/: data.rs  mod.rs
examples/hello/: Cargo.toml
examples/hello-world/: copy_example_html.py  embly.hcl  inject_example.py
examples/kv/: embly.hcl  run.sh
examples/mjpeg/: Cargo.toml  embly-project.yml  embly.hcl  run.sh
examples/project/: Cargo.toml  bundle.sh  docker-compose.yml  embly-project.yml  embly.hcl  run.sh
frontend/: .gitignore  package.json
frontend/src/: App.css  App.js
infra/: create_docker_machine.sh
infra/terraform/: elasticache.tf  instance.tf  main.tf  rds.tf  vpc.tf
local-runtime/: go.mod  go.sum  main.go  run.sh
nix/: Dockerfile  bootstrap-docker.sh  build-docker.sh  build-embly-embly.sh  build-embly.sh  build-nix.sh  docker-compose.yml  nix.Dockerfile  run-docker.sh  run.sh  sccache-shell.nix  shell.nix
notes/: cicd.md  how-to-go-fast.md  new-build-architecure.md  nixfile.md  rust-example.md  todo.md  what-is-embly.md
pkg/cache/: client.go
pkg/command/: build.go  bundle.go  command.go  command_test.go  db.go  dev.go  meta.go  run.go  simple.go
pkg/comms/: comm.go  comm_test.go  generate.go  master.go  master_test.go
pkg/config/: config.go  config_test.go  db_record.proto  embly.hcl  readme.md  run.sh
pkg/core/: generate.go  http_logging.go  kv.go  master.go  master_test.go  readme.md  start.go  test_binary.sh  vinyl.go
pkg/db/: dbconf.yml
pkg/dbutil/: dbutil.go
tools/: api-docker-compose.yml  api-run.sh  deploy_embly_run.sh  embly_run_logs.sh  generate.sh  go-test.Dockerfile  go_test.sh  rust-test.Dockerfile  rust_test.sh  todo.md
(+156 files in other folders)
