[package]
name = "embly"
version = "0.0.2"
authors = ["maxmcd <m@xmcd.me>"]
edition = "2018"
description = "Library for running functions on embly"
readme = "readme.md"
documentation = "https://docs.rs/embly/"
homepage = "https://embly.run"
repository = "https://github.com/maxmcd/embly"
license = "MIT"

[dependencies]
http = "0.1.17"
httparse = "1.3.4"
lazy_static = "1.3.0"

[lib]