[package]
name = "embly-wrapper"
version = "0.0.1"
authors = ["maxmcd <m@xmcd.me>"]
edition = "2018"

[dependencies]
protobuf = "2.6.0"
rand = "0.7.0"
lucet-wasi = "0.1.1"
lucet-runtime = "0.1.1"
lucet-runtime-internals = "0.1.1"
failure = "0.1"
log = "0.4"
env_logger = "0.6.2"

[build-dependencies]
protoc-rust = "2.0"

# https://github.com/johnthagen/min-sized-rust
[profile.release]
opt-level = 'z' 
lto = true
codegen-units = 1
panic = 'abort'
