[package]
name = "embly-wrapper"
version = "0.0.2"
authors = ["maxmcd <m@xmcd.me>"]
edition = "2018"
description = "The embly wrapper executable"
license = "MIT"
documentation = "https://docs.rs/embly"
homepage = "https://embly.run"

[dependencies]
protobuf = "2.8.1"
rand = "0.7.0"
lucet-wasi = "0.4.1"
lucet-runtime = "0.4.1"
lucet-runtime-internals = "0.4.1"
failure = {version = "~0.1", features = ["std"], default-features = false}
log = "0.4"
env_logger = "0.6.2"

[build-dependencies]
protoc-rust = "2.0"

[dev-dependencies]
lazy_static = "1.4"


[workspace]
# # https://github.com/johnthagen/min-sized-rust
# [profile.release]
# opt-level = 'z' 
# lto = true
# codegen-units = 1
# panic = 'abort'
