[package]
name = "embly"
version = "0.0.2"
authors = ["maxmcd <m@xmcd.me>"]
edition = "2018"
description = "Library for running functions on embly"
readme = "readme.md"
documentation = "https://docs.rs/embly/"
homepage = "https://embly.run"
repository = "https://github.com/maxmcd/embly"
license = "MIT"

[dependencies]
