[package]
name = "listener"
version = "0.1.0"
authors = ["maxmcd <max.t.mcdonnell@gmail.com>"]
edition = "2018"

[dependencies]
embly = { path = "../../embly-rs" }
http = "0.1.18"
serde_json = "1.0"
regex = "1"
cookie = "0.12.0"
bcrypt = "0.6"
rand = "0.7"
bincode = "1.2.1"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.7", default-features = false, features = [] }

[profile.release]
debug = true
